[project]
name = "airsim"
version = "1.8.1"
description = "Open source simulator for autonomous vehicles "
requires-python = ">=3.10"
dependencies = [
    "eclipse-zenoh>=1.9.0",
    "msgpack>=1.0.0",
    "numpy>=1.24.0",
]

[tool.setuptools.packages.find]
include = ["airsim", "airsim.*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
